--- a/src/components/main/main.module.css
+++ b/src/components/main/main.module.css
@@ -15,6 +15,29 @@
   justify-content: center;
   gap: 1rem;
 }
+.recruiter {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+.openWork {
+  height: 20px;
+  width: 20px;
+  border-radius: 100%;
+  background: linear-gradient(
+    145deg,
+    #65fc00c7,
+    #00ff80c4,
+    #91ff00c9,
+    #008d2fcb
+  );
+  background-size: 400% 400%;
+
+  animation: gradient 5s ease infinite;
+
+  box-shadow: 0 0 10px #51ff00;
+}
 .description {
   max-width: 768px;
   max-height: 100%;
@@ -45,6 +68,9 @@ img {
   #hero {
     flex-direction: column;
   }
+  .recruiter {
+    flex-direction: column;
+  }
 }
 
 /* Proyects Section */
@@ -55,12 +81,110 @@ img {
 
 .projects {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
-  gap: 25px;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  gap: 2rem;
 }
 
 h2 {
   font-size: 2rem;
   font-weight: 700;
   margin: 2rem;
+}
+
+/* contact Section */
+
+#contact {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.contact {
+  background: linear-gradient(
+    -145deg,
+    #ee7652c7,
+    #e73c7ec4,
+    #23a5d5c9,
+    #23d5abcb
+  );
+  background-size: 400% 400%;
+  max-width: 500px;
+  max-height: 450px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
+  gap: 1rem;
+  padding: 1rem;
+  border-radius: 7px;
+  animation: gradient 25s ease infinite;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.contact h2 {
+  font-size: 2rem;
+  font-weight: 700;
+  margin: 2rem;
+}
+
+.formGrop {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
+  gap: 1rem;
+}
+
+form label {
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+
+form input {
+  width: 100%;
+  height: 2rem;
+  border: solid 1px #3b3b3b;
+  border-radius: 5px;
+  padding: 0.5rem;
+}
+
+form textarea {
+  width: 100%;
+  height: 10rem;
+  border: solid 1px #3b3b3b;
+  border-radius: 5px;
+  padding: 0.5rem;
+}
+
+form button {
+  width: 100%;
+  height: 2.5rem;
+  border: solid 1px #3b3b3b;
+  border-radius: 5px;
+  padding: 0.5rem;
+  background-color: #00adb5;
+  color: #fff;
+  font-size: 1.5rem;
+  font-weight: 700;
+  cursor: pointer;
+}
+
+form button:hover {
+  background-color: #222831;
+  box-shadow: 0 0 10px #00adb5;
 }
