--- a/src/components/main/main.module.css
+++ b/src/components/main/main.module.css
@@ -10,12 +10,13 @@
 
 #hero {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 1rem;
 }
 .recruiter {
+  font-size: 1rem;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -23,6 +24,7 @@
 }
 .openWork {
   height: 20px;
+  margin-left: 10px;
   width: 20px;
   border-radius: 100%;
   background: linear-gradient(
@@ -41,7 +43,7 @@
 .description {
   max-width: 768px;
   max-height: 100%;
-  font-size: 1.5rem;
+  font-size: 3.5rem;
 }
 
 .descriptionBody {
@@ -51,17 +53,28 @@
   justify-content: center;
   gap: 25px;
 }
+.descriptionName span {
+  background: linear-gradient(45deg, #00baf0, #1002ca, #7b0ea7, #00baf0);
+  background-size: 400% 400%;
+  animation: gradient 10s ease infinite;
+  font-style: normal;
+  font-weight: 800;
+  margin-bottom: 5px;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
 
 .imgProfile {
-  border: solid 5px #3b3b3b;
-  border-radius: 5px;
   max-width: 45rem;
 }
 
 img {
-  width: 100%;
+  filter: grayscale(20%);
+  width: 80%;
   height: 100%;
   object-fit: cover;
+  border-radius: 50%;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 768px) {
@@ -71,7 +84,11 @@ img {
   .recruiter {
     flex-direction: column;
   }
+  .description {
+    font-size: 2rem;
+  }
 }
+/* Tecnologies Section */
 
 /* Proyects Section */
 
