--- a/src/index.css
+++ b/src/index.css
@@ -183,6 +183,31 @@ body {
 	/* opcional */
 	-moz-osx-font-smoothing: grayscale;
 }
+/* line animated */
+.line_style {
+	margin: auto;
+	display: block;
+	z-index: 1;
+	position: absolute;
+	
+	left: 0;
+	right: 0;
+	bottom: -100;
+
+	background: linear-gradient(90deg, #06b6d4 0%, #0e8de9 50%, #3bf69c 100%);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+		rotate: 180deg;
+
+	/* Estilo del degradado */
+
+	/* Estilo de la sombra */
+}
+
+
+/* Duración de la animación */
+
+/* Animación de la sombra */
 
 /* .descriptionName span {
   background: linear-gradient(45deg, #00baf0, #1002ca, #7b0ea7, #00baf0);
@@ -212,5 +237,3 @@ body {
 -webkit-text-fill-color: transparent;
 background-clip: text;
 text-fill-color: transparent; */
-
-
