--- a/src/components/navbar/darkmode/darkMode.css
+++ b/src/components/navbar/darkmode/darkMode.css
@@ -8,6 +8,7 @@
 	background-color: #1e293b00;
 	backdrop-filter: blur(5px);
 	position: fixed;
+	height: auto;
 	width: 100%;
 	z-index: 100;
 }
@@ -18,6 +19,7 @@
 
 .white {
 	color: var(--colorFontBlack);
+	
 	background-color: #bdecff;
 	background-image: radial-gradient(
 			at 40% 20%,
@@ -38,6 +40,7 @@
 	background-color: rgba(255, 255, 255, 0.15);
 	backdrop-filter: blur(3px);
 	position: fixed;
+	height: auto;
 	width: 100%;
 	z-index: 100;
 }
