--- a/src/components/skills/cardSkill/cardskill.css
+++ b/src/components/skills/cardSkill/cardskill.css
@@ -1,6 +1,7 @@
 .card {
 	display: flex;
 	height: auto;
+	flex-direction: row;
 	gap: 10px;
 	padding: 0.3rem 1rem;
 	align-items: center;
@@ -8,6 +9,27 @@
 	background-color: rgba(67, 70, 72, 0.138);
 	box-shadow: 3px 2px 3px 1px rgba(6, 182, 212, 0.25);
 	margin-left: 3rem;
+}
+
+.card:hover {
+	animation: bounceAndGlow 0.4s linear;
+}
+
+@keyframes bounceAndGlow {
+	0% {
+		transform: translateY(0);
+		box-shadow: 3px 2px 3px 1px rgba(6, 182, 212, 0.25);
+	}
+
+	50% {
+		transform: translateY(-10px);
+		box-shadow: 3px 2px 3px 5px rgb(0, 217, 255);
+	}
+
+	100% {
+		transform: translateY(0);
+		box-shadow: 3px 2px 3px 1px rgba(6, 182, 212, 0.25);
+	}
 }
 
 .card_title {
