--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -5,6 +5,7 @@
 	justify-content: center;
 	width: 90%;
 	height: 100%;
+	margin: 0 auto;
 	padding: 4rem 0;
 }
 
@@ -13,7 +14,8 @@
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
-	width: 100%;
+	max-width: 100%;
+	min-width: 20rem;
 	height: 100%;
 	position: relative;
 	display: flex;
