--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -2,7 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	width: 90%;
+	width: 70%;
 	margin: 0 auto;
 	padding: 5rem 0;
 }
@@ -134,7 +134,6 @@
 	opacity: 0;
 }
 
-
 .svg_card_project.isActive ~ .description_card_project {
 	opacity: 1;
 	transform: translate(0, -10px);
@@ -201,4 +200,20 @@
 .button_card_project:hover {
 	background-color: #3bf69c;
 	color: #fff;
+}
+
+@media screen and (max-width: 768px) {
+	#Projects {
+		width: 100%;
+	}
+	.projects_title {
+		font-size: 3rem;
+		margin: 3rem 0;
+		padding: 0;
+		text-align: center;
+	}
+
+	.main_container_project {
+		width: 100%;
+	}
 }
