--- a/src/components/skills/cardSkill/cardskill.css
+++ b/src/components/skills/cardSkill/cardskill.css
@@ -1,4 +1,4 @@
-.card {
+/* .card {
 	display: flex;
 	height: auto;
 	flex-direction: row;
@@ -22,12 +22,12 @@
 	}
 
 	50% {
-		transform: translateY(-10px);
+		transform: translateY(-5px);
 		box-shadow: 3px 2px 3px 5px rgb(0, 217, 255);
 	}
 
 	100% {
-		transform: translateY(0);
+		transform: translateY(-10);
 		box-shadow: 3px 2px 3px 1px rgba(6, 182, 212, 0.25);
 	}
 }
@@ -38,7 +38,41 @@
 
 .card_container_image {
 	height: auto;
-	/* object-fit: contain; */
+}
+
+.card_image {
+	width: 5.2rem;
+	height: 4rem;
+	object-fit: contain;
+} */
+
+
+
+.card {
+	display: flex;
+	height: auto;
+	flex-direction: row;
+	gap: 10px;
+	padding: 0.3rem 1rem;
+	align-items: center;
+	border-radius: 7px;
+	background-color: transparent;
+	box-shadow: 0px 0px 0px 0px rgba(6, 182, 212, 0.25);
+	margin-left: 3rem;
+	transition: transform 0.4s, box-shadow 0.4s; /* Agregar transición para suavizar el cambio */
+}
+
+.card:hover {
+	transform: translateY(-10px); /* Aplicar la transformación directamente en :hover */
+	box-shadow: 0px 0px 0px 1px rgb(0, 217, 255); /* Establecer la nueva sombra en :hover */
+}
+
+.card_title {
+	font-size: 1.2rem;
+}
+
+.card_container_image {
+	height: auto;
 }
 
 .card_image {
