--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -2,7 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	width: 90%;
+	width: 70%;
 	margin: 0 auto;
 	padding: 5rem 0;
 }
@@ -50,12 +50,10 @@
 	height: 30rem;
 	width: 20rem;
 	gap: 1rem;
-	background-color: #ffffff22;
-	box-shadow: 10px 1px 10px 1px #67666622;
+	background-color: #ffffff00;
+	box-shadow: 2px 1px 2px 1px #67666622;
 	border-radius: 20px;
 }
-
-
 
 .card_container_languaje h3,
 .card_container_frontend h3,
@@ -69,4 +67,21 @@
 	font-size: 3rem;
 	font-weight: 100;
 	font-style: italic;
+}
+
+@media screen and (max-width: 768px) {
+	#Skills {
+		width: 100%;
+		justify-content: center;
+	}
+	.container_main_skills {
+		grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+	}
+
+	.skills_title {
+		font-size: 4rem;
+		margin: 2rem 0;
+		padding: 0;
+		text-align: center;
+	}
 }
