--- a/src/page/main/main.css
+++ b/src/page/main/main.css
@@ -5,7 +5,7 @@ main {
 main {
 	display: flex;
 	height: 100vh;
-	width: 90%;
+	width: 70%;
 	flex-direction: column;
 	font-family: var(--tipo-principal);
 	font-weight: 400;
@@ -180,6 +180,10 @@ main {
 		padding: 0.8rem 3.5rem;
 		border-radius: 25px;
 		cursor: pointer;
+	}
+
+	main {
+		width: 98%;
 	}
 }
 
